# klever-vm-executor-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile
.github/workflows/: libvmexeccapi-build.yml  rust-ci.yml
c-api/: Cargo.toml  libvmexeccapi.h
c-api/src/: capi_breakpoints.rs  capi_executor.rs  capi_instance.rs  capi_instance_cache.rs  capi_logger.rs  capi_metering.rs  capi_vm_hook_pointers.rs  capi_vm_hooks.rs  service_singleton.rs
vm-executor/: Cargo.toml  README.md
vm-executor-wasmer/: Cargo.toml
vm-executor-wasmer/src/: wasmer_breakpoints.rs  wasmer_executor.rs  wasmer_imports.rs  wasmer_instance.rs  wasmer_metering.rs  wasmer_metering_helpers.rs  wasmer_service.rs  wasmer_vm_hooks.rs
vm-executor-wasmer/tests/common/: test_instance.rs
vm-executor/src/: breakpoint_value.rs  vm_hooks.rs
