[package]
name = "klever-chain-vm-executor"
version = "0.2.0"
edition = "2021"

authors = []
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/klever-io/klever-vm-executor-rs"
homepage = "https://klever.io/"
documentation = "https://docs.klever.finance/"
description = "Klever VM executor interface"
keywords = ["klever", "blockchain", "VM"]
categories = ["cryptography::cryptocurrencies"]

[lib]
